<resources>
    <string name="app_name">SimpleNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <!---->
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="descriptionEdit">Description</string>
    <string name="titleEdit">Title</string>
    <string name="save">Save</string>
    <string name="enter_todo">Enter todo</string>
    <string name="add_todo">input todo</string>
    <string name="add_to_do">To-Do</string>
    <string name="add_ledger">Ledger</string>
    <string name="add_new_note">Add Note</string>
    <string name="actions">Actions</string>
    <string name="enter_task">Enter task</string>
    <string name="add_task">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_timer">Set Timer</string>
    <string name="task">Task</string>
    <string name="back">Back</string>
    <string name="note_title">"Note title "</string>
    <string name="note_description">Note Description</string>
    <string name="image_desc_features">app\'s feature\n</string>
    <string name="image_desc_swipe">Master Swipes \n</string>
    <string name="image_desc_welcome">Welcome to Simple Notes!</string>
    <string name="features">Edit ledgers (auto calculation) or manage todos with timers/reminders. Swipe Right to Delete</string>

    <string-array name="motivational_quotes">
        <item>Keep going! You\'re Stronger than you think! 💪</item>
        <item>Small steps lead to big wins! Don’t give up! 🚀</item>
        <item>Let’s get back on track! You’ve got this! 🔥</item>
        <item>Every moment is a fresh start—seize it! 🌟</item>
        <item>Believe in yourself—you’re unstoppable! ⚡</item>
    </string-array>

    <string name="app_tagline">Organize your thoughts beautifully</string>
    <string name="made_with">Made with </string>
    <string name="heart_icon_description">Heart icon</string>
    <string name="by_text"> by</string>
    <string name="developer_name"> Neelesh </string>
    <string name="app_version">Version 1.0</string>


</resources>