<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bg_app"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="16dp"
        android:hint="@string/titleEdit"
        android:inputType="text"
        android:textAllCaps="true"
        android:textColorHint="@color/hint_txt_clr"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="inherit"
        android:background="@drawable/bg_corner"

        />


    <ScrollView
        android:layout_margin="8dp"
        android:id="@+id/scroll_view"
        android:layout_below="@+id/edit_text_title"
        android:layout_above="@id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner"
        android:elevation="4dp"
        android:fillViewport="true">



            <EditText
                android:id="@+id/edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/descriptionEdit"
                android:inputType="textMultiLine"
                android:textColorHint="@color/hint_txt_clr"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:gravity="top"/>

    </ScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ripple_color"
        android:layout_marginTop="20dp"
        android:text="@string/save" />

</RelativeLayout>